# fapiao-print

./: .gitignore  CHANGELOG.md  LICENSE  README.md  _check_pdf.ps1  _test_ocr.rs  package-lock.json  package.json  sample.ofd
.github/workflows/: build.yml
sample_ofd_extracted/: OFD.xml
sample_ofd_extracted/Doc_0/: Document.xml  DocumentRes.xml  PublicRes.xml
sample_ofd_extracted/Doc_0/Annots/: Annotations.xml
sample_ofd_extracted/Doc_0/Annots/Page_0/: Annotation.xml
sample_ofd_extracted/Doc_0/Pages/Page_0/: Content.xml
sample_ofd_extracted/Doc_0/Tags/: CustomTag.xml
sample_ofd_extracted/Doc_0/Tpls/Tpl_0/: Content.xml
scripts/: build-all.js  bump-version.js
src/: app.js  index.html  layout.js  ocr.js  print.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.ocr.conf.json
src-tauri/capabilities/: default.json
src-tauri/ofd-engine/: Cargo.toml
src-tauri/ofd-engine/src/: lib.rs
src-tauri/src/: lib.rs  pdf_engine.rs
