[package]
name = "fapiao-print"
version = "1.1.0"
description = "电子发票批量打印工具"
authors = ["fapiao-print"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
base64 = "0.22"
image = { version = "0.24", default-features = false, features = ["jpeg", "png", "ico"] }
printpdf = { version = "0.7", features = ["embedded_images"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_System_Com",
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Data_Pdf",
    "Storage",
    "Storage_Streams",
    "Graphics_Imaging",
    "Foundation",
] }


[profile.release]
opt-level = "z"     # 最小体积优化
lto = true          # 链接时优化，消除未使用代码
strip = true        # 剥离调试符号
codegen-units = 1   # 单编译单元，更好的优化
